Update text justify and center

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -176,3 +176,9 @@
 }
 
 @custom-variant dark (&:is(.dark *));
+
+@layer base {
+  p {
+    @apply text-justify hyphens-auto; /* hyphens-auto ayuda a que no queden huecos grandes */
+  }
+}
